--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@fortawesome/free-regular-svg-icons": "^7.1.0",
 		"@fortawesome/free-solid-svg-icons": "^7.1.0",
 		"@fortawesome/react-fontawesome": "^3.1.0",
+		"@radix-ui/react-accordion": "^1.2.12",
 		"@radix-ui/react-slot": "^1.2.4",
 		"antd": "^5.29.1",
 		"class-variance-authority": "^0.7.1",
