--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@google/genai": "^1.30.0",
 		"@radix-ui/react-accordion": "^1.2.12",
 		"@radix-ui/react-slot": "^1.2.4",
+		"@sanity/image-url": "^2.0.2",
 		"antd": "^5.29.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -24,6 +25,7 @@
 		"embla-carousel-react": "^8.6.0",
 		"lucide-react": "^0.554.0",
 		"next": "^16.0.7",
+		"next-sanity": "^11.6.10",
 		"next-themes": "^0.4.6",
 		"react": "^19.2.1",
 		"react-dom": "^19.2.1",
